[UPD] change name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-spinner</title>
+    <title>vue-qrcode</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="example/app.css">
   </head>
@@ -14,9 +14,8 @@
     </div>
 
     
-    <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="node_modules/vue/dist/vue.min.js"></script>
     <script src="build/bundle.js"></script>
-    <!--<script src="dist/vue-spinner.js"></script>
-    <script src="example/app.js"></script>-->
+    <!--<script src="dist/vue-qrcode.js"></script>-->
   </body>
 </html>
