--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     
     <script src="node_modules/vue/dist/vue.min.js"></script>
-    <script src="build/bundle.js"></script>
-    <!--<script src="dist/vue-qrcode.js"></script>-->
+    <!-- <script src="build/bundle.js"></script> -->
+    <script src="dist/vue-qrcode.js"></script>
+    <script src="example/app.js"></script>
   </body>
 </html>
