--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
           <li>
             <label>val</label>
-            <textarea rows="6" cols="80">{{val}}</textarea>
+            <textarea rows="6" cols="80" v-model="val"></textarea>
           </li>
         </ul>
         
