[UPD] add filter number

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="lists">
           <li>
             <label>size(px)</label>
-            <input type="number" v-model="size">
+            <input type="number" v-model="size | toNumber">
           </li>
           <li>
             <label>bg-color</label>
